<resources>
    <string name="freeze_bottom_sheet_behavior"
            translatable="false">com.tlt.georepo.view.bottomsheet.FreezeBottomSheet</string>
    <string name="google_maps_key">AIzaSyCDXfNxbKtMdixlksfkyygnsJsikGSVjDA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="language_thai">TH</string>
    <string name="language_english">EN</string>
    <string name="language_thai_display">ภาษาไทย</string>
    <string name="language_english_display">English</string>
    <string name="facebook_app_id">2102363810002053</string>
    <string name="fb_login_protocol_scheme">fb2102363810002053</string>
    <string name="loading">Loading</string>
    <string name="currency">%1$s Baht</string>
    <string name="error_cant_back">Can\'t back</string>
    <string name="error_not_empty">Phone number is incorrect</string>
    <string name="error_email_pattern">Email address is incorrect</string>
    <string name="error_password_not_match">Sorry, PIN code is incorrect.</string>
    <string name="error_password_require_6_digits">Sorry, Set PIN with 6 digits.</string>
    <string name="error_idcard_pattern">ID no. or Passport no. is incorrect, please enter again.</string>
    <string name="open_email_app">Choose email app</string>
    <string name="home_title">Loan Calculation</string>
    <string name="otp_dialog_description">The system will send OTP to your phone number</string>
    <string name="otp_dialog_btn_confirm">Confirm</string>
    <string name="otp_dialog_btn_cancel">Cancel</string>
    <string name="otp_btn_confirm">Confirm</string>
    <string name="default_notification_channel_id">tlt_develop</string>
    <string name="pincode_title_header">Insert the PIN Code</string>
    <string name="pincode_forgot_pin">Forgot password</string>
    <string name="register_title">Register</string>
    <string name="quotation_title">Request Quotation</string>
    <string name="setuppincode_title">Set PIN Code</string>
    <string name="register_success_title">Set PIN Code</string>
    <string name="fingerprint_setting_title">ตั้งค่าลายนิ้วมือ</string>
    <string name="filter_car_title">Select Car</string>
    <string name="verifyemail_title">Verification</string>
    <string name="verifyemail_title_header">Confirm Email</string>
    <string name="verifyemail_description">To process the registration, please press the "Confirm my email" button  to confirm your email.</string>
    <string name="verifyemail_confirm_text">Confirm my email</string>
    <string name="verifyemail_txt_not_yet_receive_email">Have not received email?</string>
    <string name="verifyemail_btn_resend_email">Resend</string>
    <string name="verifyemail_success_title_header">Welcome</string>
    <string name="verifyemail_success_description">You have already confirmed your email. Please press the below button for continue the registration process.</string>
    <string name="verifyemail_success_confirm_text">Go back to setting page</string>
    <string name="verifyemail_fail_title_header">Cannot confirm email</string>
    <string name="verifyemail_fail_description">Link for email confirmation has been expired. please press the button to confirm your email again</string>
    <string name="policy_title_header">Terms and conditions</string>
    <string name="policy_confirm_text">Next</string>
    <string name="policy_accept_term_and_condition">Agree on terms and conditions</string>
    <string name="policy_unaccept_term_and_condition">Not Agree on terms and conditions</string>
    <string name="selectphone_header_title">Please select the mobile number to sent OTP for a verification</string>
    <string name="selectphone_contact_staff">Please contact Call Center agent</string>
    <string name="selectphone_phone_not_found">In case your mobile number is not found, please press "Contact Call Center Agent" for modify your mobile number.</string>
    <string name="callcenter_dialog_description">Contact Call Center\n%1$s</string>
    <string name="callcenter_dialog_btn_cancel">Cancel</string>
    <string name="callcenter_dialog_btn_call">Call</string>
    <string name="otp_header_title">Enter OTP to verification</string>
    <string name="otp_did_not_get_otp">Have not received OTP code.</string>
    <string name="otp_resend_otp">Resend</string>
    <string name="otp_entered_incorrect">The OTP entered is incorrect.</string>
    <string name="otp_timeout_otp">OTP code has been expired. Please press "Resend" button.</string>
    <string name="register_success_header_title">Registration is completed</string>
    <string name="register_success_description">For the safety to access your information. Please set the PIN for use in next time.</string>
    <string name="register_success_confirm_text">Set the PIN</string>
    <string name="setuppincode_header_title">Set PIN with 6 digits</string>
    <string name="setuppincode_confirm_text">Confirm</string>
    <string name="fingerprint_setting_description">Would you like to access the application with the Touch ID?</string>
    <string name="registerform_title_header">Please fill out the hirer is information for registeration</string>
    <string name="registerform_email_hint">Email.</string>
    <string name="registerform_id_card_hint">Insert ID Card number 13-digit</string>
    <string name="registerform_birthdate_hint">Birthdate</string>
    <string name="registerform_personal_id_type_title">Select type of data</string>
    <string name="registerform_btn_next">Next</string>
    <string name="registerform_radio_id_card">ID card number</string>
    <string name="registerform_radio_passport">Passport number</string>
    <string name="registerform_passport_hint">Insert Passport number</string>
    <string name="registerform_txt_description">ID no. or Passport no. will be used for verify vehicle is information only</string>
    <string name="registerform_txt_id_card_description">Please insert your ID card number or Passport number which have been given in the Car Financial contract.</string>
    <string name="fingerprint_setting_confirm_text">Yes, access the app with my finger print.</string>
    <string name="fingerprint_setting_skip_text">Skip, Go to the main page.</string>
    <string name="fingerprint_dialog_description">Access with the Touch ID\nor press "Cancel" to go back to use the password pin </string>
    <string name="fingerprint_wait_scan">Please scan your finger for authentication</string>
    <string name="fingerprint_scan_fail">Please try again.</string>
    <string name="fingerprint_scan_success">Connected the ID touch</string>
    <string name="fingerprint_dialog_btn_confirm">Go to the main page.</string>
    <string name="fingerprint_auth_dialog_btn_cancel">Cancel</string>
    <string name="fingerprint_dialog_please_try_again">Please try again.</string>
    <string name="setuppincode_password_hint">PIN Code</string>
    <string name="setuppincode_password_confirm_hint">Confirm PIN Code</string>
    <string name="refinance_diaglog_btn_confirm">Enter</string>
    <string name="notify_btn_see_more">More</string>
    <string name="notify_filter_dialog_btn_confirm">Enter</string>
    <string name="notify_filter_dialog_title">Select Time Period</string>
    <string name="notice_dialog_text_dont_show_again">Don\'t show again.</string>
    <string name="notice_dialog_confirm">Detail</string>
    <string name="notify_remove">Remove</string>
    <string name="resetpincode_title">Change PIN number</string>
    <string name="pincode_incorrect">PIN code is incorrect please try again.</string>
    <string name="pincode_incorrect_3_times">รหัส PIN ไม่ถูกต้องใส่ได้อีก2ครั้ง</string>
    <string name="pincode_incorrect_4_times">รหัส PIN ไม่ถูกต้องใส่ได้อีก1ครั้ง</string>
    <string name="noncustomer_register">Register / Login</string>
    <string name="auth_attempt_over_limit_dialog_description">คุณใส่รหัส PIN ผิดครบ 5 ครั้งแล้ว</string>
    <string name="is_exit_dialog_description">Are you sure you want to quit your app?</string>
    <string name="hotline_contact_us_topic">Subject *</string>
    <string name="hotline_contact_us_detail">Message *</string>
    <string name="hotline_contact_us_upload">Upload (if you have)</string>
    <string name="hotline_contact_us_upload_limit_size">Support file types ; jpeg, jpg, png</string>
    <string name="hotline_contact_us_request_question">Send</string>
    <string name="dialog_button_ok">OK</string>
    <string name="location_distance">%1$s km.</string>
    <string name="location_direction">Route</string>
    <string name="location_tel">Call</string>
    <string name="location_detail">Detail</string>
    <string name="location_show_all">Show All</string>
    <string name="location_hide">Hide</string>
    <string name="location_hq_filter">Office Location</string>
    <string name="location_dealer_filter">Dealer Location</string>
    <string name="location_detail_office">Home , Address</string>
    <string name="location_detail_address">เลขที่ 1194/3 ถนนพหลโยธิน แขวงจอมพล เขตจตุจักร กรุงเทพมหานคร 10900</string>
    <string name="location_detail_tel">(02) 512 0147-60, (02) 513 3195-6</string>
    <string name="location_detail_time">ทุกวัน: 07:00 – 19:00</string>
    <string name="location_detail_website">http://www.toyotametro.co.th/</string>
    <string name="location_filter_title">Search</string>
    <string name="location_filter_dealer_hint">Dealer</string>
    <string name="location_filter_dealer_title">Search dealer location</string>
    <string name="location_filter_province_hint">Select province</string>
    <string name="location_filter_district_hint">Select district</string>
    <string name="location_filter_office">Office</string>
    <string name="location_filter_showroom">Showroom</string>
    <string name="location_filter_service">Service Center</string>
    <string name="location_filter_repair">Body &amp; Paint Center</string>
    <string name="location_filter_dealer_nearly">Search dealer location nearby</string>
    <string name="location_filter_search">Search</string>
    <string name="location_office_title">All Branches (%1$s)</string>
    <string name="location_showroom_title">Dealer (%1$s)</string>
    <string name="location_not_found_description">Sorry we couldn\’t find any info.\nPlease search for other related keywords</string>
    <string name="location_back_to_search">Back to the previous page</string>
    <string name="location_switch_on_location_title">Please allow the app to access your location for accuracy of search functions.</string>
    <string name="question_and_answer_topic_hint">Select topic</string>
    <string name="question_and_answer_sent_success">Thank you for your inquiry,\nthe staff will get back to you shortly</string>
    <string name="non_customer_description">Sorry, you are not allowed to access this page\nPlease register to access the data of TLT customer</string>
    <string name="location_responsibility">Responsible province</string>
    <string name="alert_device_logon_title">You have now logged out of the system.</string>
    <string name="dil_title_status_arrive">Job Status \"Arrive\" </string>
    <string name="dil_msg_status_arrive">You have already arrived to the destination. Is it the correct location?</string>
  <string name="dil_txt_yes">Yes</string>
    <string name="dil_txt_no">No</string>
    <string name="dil_txt_cancel">Cancel</string>
    <string name="txt_profileTab">PROFILE</string>
    <string name="txt_detailTab">DETAIL</string>
    <string name="txt_remarkTab">REMARK</string>
</resources>